--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,67 +1,62 @@
----
-layout: default
-title: Playground
-permalink: playground
----
+<!DOCTYPE html>
+<html>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.45.0/codemirror.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.css">
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" media="screen" type="text/css">
+  <title>Liquid LSP Engine</title>
+</head>
 
-<h1>Syntax Tree Playground</h1>
+<body class="sidebar-hidden">
+  <script>
+    if (localStorage.getItem('sidebar-active') === 'true') {
+      document.body.classList.remove('sidebar-hidden');
+    }
+  </script>
 
-<div id="playground-container" style="visibility: hidden;">
+  <div id="container">
+    <main id="main-content">
+      {{ content }}
+    </main>
+  </div>
+</body>
+</html>
 
-<h4>Code</h4>
-<select id="language-select">
-  <option value="bash">Bash</option>
-  <option value="c">C</option>
-  <option value="cpp">C++</option>
-  <option value="c_sharp">C#</option>
-  <option value="go">Go</option>
-  <option value="html">HTML</option>
-  <option value="java">Java</option>
-  <option value="javascript" selected="selected">JavaScript</option>
-  <option value="php">PHP</option>
-  <option value="python">Python</option>
-  <option value="ruby">Ruby</option>
-  <option value="rust">Rust</option>
-  <option value="toml">TOML</option>
-  <option value="typescript">TypeScript</option>
-  <option value="yaml">YAML</option>
-  <option value="ql">QL</option>
-</select>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  crossorigin="anonymous">
+</script>
 
-<input id="logging-checkbox" type="checkbox"></input>
-<label for="logging-checkbox">Log</label>
+<script
+  src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.bundle.min.js">
+</script>
 
-<input id="query-checkbox" type="checkbox"></input>
-<label for="query-checkbox">Query</label>
+<script>
+  $('#sidebar-toggle-link').click(function(e) {
+    e.preventDefault();
+    $(document.body).toggleClass('sidebar-hidden');
+    localStorage.setItem(
+      'sidebar-active',
+      localStorage.getItem('sidebar-active') === 'true' ? 'false' : 'true'
+    );
+  });
 
-<textarea id="code-input">
-</textarea>
+  if (document.body.scrollHeight > window.innerHeight + 500) {
+    $(document.body).scrollspy({
+      target: '#current-page-table-of-contents',
+      offset: 40
+    });
+  }
 
-<div id="query-container" style="visibility: hidden; position: absolute;">
-  <h4>Query</h4>
-  <textarea id="query-input"></textarea>
-</div>
+  $(document).scroll(function() {
+    if ($(document).scrollLeft() > 0) {
+      localStorage.setItem('sidebar-active', 'false');
+      $(document.body).addClass('sidebar-hidden');
+    }
+  });
 
-<h4>Tree</h4>
-<span id="update-time"></span>
-<div id="output-container-scroll">
-  <pre id="output-container" class="highlight"></pre>
-</div>
-
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.45.0/codemirror.min.js"></script>
-
-{% if jekyll.environment == "development" %}
-<script>LANGUAGE_BASE_URL = "/assets/js";</script>
-<script src="/assets/js/tree-sitter.js"></script>
-{% else %}
-<script>LANGUAGE_BASE_URL = "https://tree-sitter.github.io";</script>
-<script src="https://tree-sitter.github.io/tree-sitter.js"></script>
-{% endif %}
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.js"></script>
-<script src="{{ '/assets/js/playground.js' | relative_url }}"></script>
+  $('h2, h3').filter('[id]').each(function() {
+    $(this).html('<a href="#'+$(this).attr('id')+'">' + $(this).text() + '</a>');
+  });
+</script>
