--- a/docs/assets/css/styles.scss
+++ b/docs/assets/css/styles.scss
@@ -174,6 +174,8 @@ a > span {
   .CodeMirror-scroll {
     height: auto;
     max-height: 350px;
+    line-height: 1.2em;
+    min-height: 6em;
   }
 
   h2, h4, select, .field, label {
